start to decompose transcription to build new cases automatically